--- a/src/pages/attack.html
+++ b/src/pages/attack.html
@@ -13,38 +13,61 @@
     </div>
 
     <section class="game">
-      <div class="game__bg-dark">
-        <h1 class="count" id="count"></h1>
-        <form class="game-container" id="gameForm">
-          <div class="game-container__nameAndtimer">
-            <h1 class="game-container__name">
-              Good luck, <span id="name">Tester</span>
-            </h1>
-            <div id="timer"></div>
-          </div>
+      <h1 class="count" id="count">3</h1>
 
-          <div class="game-container__task" id="task">
-            <div class="game-container__task--numbers" id="firstNumber">10</div>
-            <div class="game-container__task--operator" id="operator">+</div>
-            <div class="game-container__task--numbers" id="secondNumber">
-              42
-            </div>
-            <div class="game-container__task--equal">=</div>
-            <input
-              class="game-container__task--result"
-              id="result"
-              type="number"
-              placeholder="0"
-              autofocus
-              required
-            />
-          </div>
-          <h4 class="game-container__score">
-            Your score:<span id="scoreForm">0</span>
-          </h4>
-          <button class="game-container__stop" type="button">STOP GAME</button>
-        </form>
+      <div class="game__popup" id="popup">
+        <h1 class="game__popup--title">Game Over</h1>
+        <h4 class="game__popup--score">
+          Your score: <span id="totalScore">0</span>
+        </h4>
+        <p class="game__popup--answer">
+          Correct: <span id="correctAnswer">0</span>
+        </p>
+        <p class="game__popup--answer last">
+          Incorrect: <span id="incorrectAnswer">0</span>
+        </p>
+        <button class="game__popup--btn popupBtn" data-href="/">
+          Back to main menu
+        </button>
+        <button class="game__popup--btn popupBtn" data-href="attack.html">
+          Play again
+        </button>
+        <button class="game__popup--btn popupBtn" data-href="leaderboard.html">
+          Leaderboard
+        </button>
       </div>
+      <canvas class="game__congratulations" id="congratulations"></canvas>
+
+      <form class="game-container" id="gameForm">
+        <div class="game-container__nameAndtimer">
+          <h1 class="game-container__name">
+            Good luck, <span id="name">Tester</span>
+          </h1>
+          <div id="timer"></div>
+        </div>
+
+        <div class="game-container__task" id="task">
+          <div class="game-container__task--numbers" id="firstNumber">10</div>
+          <div class="game-container__task--operator" id="operator">+</div>
+          <div class="game-container__task--numbers" id="secondNumber">42</div>
+          <div class="game-container__task--equal">=</div>
+          <input
+            class="game-container__task--result"
+            id="result"
+            type="number"
+            placeholder="0"
+            autofocus
+            required
+          />
+        </div>
+        <h4 class="game-container__score">
+          Your score:<span id="scoreForm">0 </span>
+          <b class="scoreCounter" id="scoreCounter">+1</b>
+        </h4>
+        <button class="game-container__stop" id="stopGamebtn" type="button">
+          STOP GAME
+        </button>
+      </form>
     </section>
     <!-- ########### END GAME SCREEN ########### -->
     <script type="module" src="./scripts/attack/index.js"></script>
