--- a/src/pages/attack.html
+++ b/src/pages/attack.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>module 3</title>
+    <title>Math Quiz</title>
   </head>
   <body>
     <!-- ########### START GAME SCREEN ########### -->
@@ -39,7 +39,7 @@
       <canvas class="game__congratulations" id="congratulations"></canvas>
 
       <form class="game-container" id="gameForm">
-        <div class="game-container__nameAndtimer">
+        <div class="game-container__nameAndtimer" id="nameNtimer">
           <h1 class="game-container__name">
             Good luck, <span id="name">Tester</span>
           </h1>
