--- a/src/pages/leaderboard.html
+++ b/src/pages/leaderboard.html
@@ -4,7 +4,100 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>module 3</title>
+    <title>Math Quiz</title>
   </head>
-  <body></body>
+  <body>
+    <section class="leaderboard">
+      <img
+        class="leaderboard__parallax"
+        src="../assets/img/1.png"
+        data-position="-1"
+        alt="first img"
+      />
+      <img
+        class="leaderboard__parallax"
+        src="../assets/img/2.png"
+        data-position="5"
+        alt="first img"
+      />
+      <img
+        class="leaderboard__parallax"
+        src="../assets/img/3.png"
+        data-position="2"
+        alt="first img"
+      />
+      <img
+        class="leaderboard__parallax"
+        src="../assets/img/4.png"
+        data-position="6"
+        alt="first img"
+      />
+      <img
+        class="leaderboard__parallax"
+        src="../assets/img/5.png"
+        data-position="8"
+        alt="first img"
+      />
+      <img
+        class="leaderboard__parallax"
+        src="../assets/img/6.png"
+        data-position="-2"
+        alt="first img"
+      />
+      <img
+        class="leaderboard__parallax"
+        src="../assets/img/7.png"
+        data-position="4"
+        alt="first img"
+      />
+      <img
+        class="leaderboard__parallax"
+        src="../assets/img/8.png"
+        data-position="-9"
+        alt="first img"
+      />
+      <img
+        class="leaderboard__parallax"
+        src="../assets/img/9.png"
+        data-position="6"
+        alt="first img"
+      />
+      <img
+        class="leaderboard__parallax"
+        src="../assets/img/10.png"
+        data-position="-7"
+        alt="first img"
+      />
+      <img
+        class="leaderboard__parallax"
+        src="../assets/img/11.png"
+        data-position="-5"
+        alt="first img"
+      />
+      <img
+        class="leaderboard__parallax"
+        src="../assets/img/12.png"
+        data-position="5"
+        alt="first img"
+      />
+      <div class="leaderboard__container">
+        <div class="leaderboard__container--glass">
+          <div class="leaderboard__container--content">
+            <h1>LEADERBOARD</h1>
+            
+          
+              <div class="leaderboard__mode"> 	
+                <input class="dropdown" type="checkbox" id="dropdown" name="dropdown"/>
+                <label class="for-dropdown" for="dropdown">Game mode<i class="uil uil-arrow-down"></i>
+                </label>
+
+                <div class="section-dropdown"> 
+                  <a class="items" href="#">Attack</a>
+                  <a href="#">Practice</a>
+                </div>
+              </div>
+      </div>
+    </section>
+    <script src="../scripts/leaderBoard/index.js"></script>
+  </body>
 </html>
