--- a/src/pages/leaderboard.html
+++ b/src/pages/leaderboard.html
@@ -95,8 +95,13 @@
                   <a class="items" href="#">Attack</a>
                   <a href="#">Practice</a>
                 </div>
+
+            <div class="leaderboard__list" id="leaderList">
               </div>
       </div>
+      <button class="leaderboard__btn">
+        <a href="/">Go to main</a><b></b>
+      </button>
     </section>
     <script src="../scripts/leaderBoard/index.js"></script>
   </body>
