--- a/src/pages/leaderboard.html
+++ b/src/pages/leaderboard.html
@@ -83,7 +83,7 @@
       <div class="leaderboard__container">
         <div class="leaderboard__container--glass">
           <div class="leaderboard__container--content">
-            <h1>LEADERBOARD</h1>
+            <h1 class="leaderboard__container--title">LEADERBOARD</h1>
             
           
               <div class="leaderboard__mode"> 	
