--- a/src/pages/attack.html
+++ b/src/pages/attack.html
@@ -8,13 +8,11 @@
   </head>
   <body>
     <!-- ########### START GAME SCREEN ########### -->
-    <div class="countdown dn">
+    <div class="countdown" tabindex="1">
       <h1 id="countDownText">3</h1>
     </div>
 
     <section class="game">
-      <h1 class="count" id="count">3</h1>
-
       <div class="game__popup" id="popup">
         <h1 class="game__popup--title">Game Over</h1>
         <h4 class="game__popup--score">
